--- a/Upper_1/Info.plist
+++ b/Upper_1/Info.plist
@@ -27,6 +27,14 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>请允许本应用访问相机功能，以便于扫描、签到和拍照</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>请允许本应用使用定位，我们将为你提供城市定位</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>请允许本应用使用定位，我们将为你提供城市定位</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请允许本应用访问相册，用于上传活动图片</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
