活动助手图片，消息异步下载

--- a/Upper_1/resource/plist/ActivityStatus.plist
+++ b/Upper_1/resource/plist/ActivityStatus.plist
@@ -10,77 +10,77 @@
 		<key>Title</key>
 		<string>火热募集中</string>
 	</dict>
-    <dict>
-        <key>ID</key>
-        <string>1</string>
-        <key>Description</key>
-        <string>募集成功</string>
-        <key>Title</key>
-        <string>火热募集中</string>
-    </dict>
-    <dict>
-        <key>ID</key>
-        <string>2</string>
-        <key>Description</key>
-        <string>男性满员</string>
-        <key>Title</key>
-        <string></string>
-    </dict>
-    <dict>
-        <key>ID</key>
-        <string>3</string>
-        <key>Description</key>
-        <string>活动满员</string>
-        <key>Title</key>
-        <string>满员</string>
-    </dict>
-    <dict>
-        <key>ID</key>
-        <string>4</string>
-        <key>Description</key>
-        <string>募集成功</string>
-        <key>Title</key>
-        <string>募集截止</string>
-    </dict>
-    <dict>
-        <key>ID</key>
-        <string>5</string>
-        <key>Description</key>
-        <string>募集失败</string>
-        <key>Title</key>
-        <string>募集截止</string>
-    </dict>
-    <dict>
-        <key>ID</key>
-        <string>6</string>
-        <key>Description</key>
-        <string>活动进行中</string>
-        <key>Title</key>
-        <string>进行中</string>
-    </dict>
-    <dict>
-        <key>ID</key>
-        <string>7</string>
-        <key>Description</key>
-        <string>活动待回顾</string>
-        <key>Title</key>
-        <string>圆满结束</string>
-    </dict>
-    <dict>
-        <key>ID</key>
-        <string>8</string>
-        <key>Description</key>
-        <string>活动已回顾</string>
-        <key>Title</key>
-        <string>圆满结束</string>
-    </dict>
-    <dict>
-        <key>ID</key>
-        <string>9</string>
-        <key>Description</key>
-        <string>活动取消</string>
-        <key>Title</key>
-        <string>已取消</string>
-    </dict>
+	<dict>
+		<key>ID</key>
+		<string>1</string>
+		<key>Description</key>
+		<string>募集成功</string>
+		<key>Title</key>
+		<string>募集中</string>
+	</dict>
+	<dict>
+		<key>ID</key>
+		<string>2</string>
+		<key>Description</key>
+		<string>男性满员</string>
+		<key>Title</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>ID</key>
+		<string>3</string>
+		<key>Description</key>
+		<string>活动满员</string>
+		<key>Title</key>
+		<string>满员</string>
+	</dict>
+	<dict>
+		<key>ID</key>
+		<string>4</string>
+		<key>Description</key>
+		<string>募集成功</string>
+		<key>Title</key>
+		<string>募集截止</string>
+	</dict>
+	<dict>
+		<key>ID</key>
+		<string>5</string>
+		<key>Description</key>
+		<string>募集失败</string>
+		<key>Title</key>
+		<string>募集截止</string>
+	</dict>
+	<dict>
+		<key>ID</key>
+		<string>6</string>
+		<key>Description</key>
+		<string>活动进行中</string>
+		<key>Title</key>
+		<string>进行中</string>
+	</dict>
+	<dict>
+		<key>ID</key>
+		<string>7</string>
+		<key>Description</key>
+		<string>活动待回顾</string>
+		<key>Title</key>
+		<string>圆满结束</string>
+	</dict>
+	<dict>
+		<key>ID</key>
+		<string>8</string>
+		<key>Description</key>
+		<string>活动已回顾</string>
+		<key>Title</key>
+		<string>圆满结束</string>
+	</dict>
+	<dict>
+		<key>ID</key>
+		<string>9</string>
+		<key>Description</key>
+		<string>活动取消</string>
+		<key>Title</key>
+		<string>已取消</string>
+	</dict>
 </array>
 </plist>
